--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/potatosalad.html">Italian Potato Salad</a></li>
-        <li></li>
+        <li><a href="./recipes/pepperonipizza.html">Campfire Pepperoni Pizza</a></li>
     </ul>
 </body>
 </html>
