--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Lasagna</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Ff5fb06bae980ae5f3bc67b14d71ff4f5%2F1667067170083Homemade-Lasagna.jpeg&q=60&c=sc&poi=auto&orient=true&h=512"
-        alt="Lasagna">
+        alt="Lasagna" width="300" height="300">
     <h2>Description</h2>
     <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously
         cheesy filling.</p>
