--- a/recipes/potatosalad.html
+++ b/recipes/potatosalad.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Italian Potato Salad</h1>
     <img src="https://www.allrecipes.com/thmb/SSJVeYBTWvKJrzBBvbPslAgaQk4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5615052_Patate-Prezzemolate-Vegan-Italian-Potato-Salad-4x3-ec3a5db9b5374dea883f65085b6b3a04.jpg"
-        alt="Italian Potato Salad">
+        alt="Italian Potato Salad" width="300" height="300">
     <h2>Description</h2>
     <p>This is a classic Italian potato salad that can be found on tables from the north to the south. Meaning "parsley
         potatoes", you'll find Patate Prezzemolate everywhere in Italy: formal luncheons, family get-togethers,
