--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,8 +13,7 @@
         alt="Lasagna" width="300" height="300">
     <h2>Description</h2>
     <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously
-        cheesy filling.</p>
-    <p>I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
+        cheesy filling. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>Meat</li>
