--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Lasagna</title>
 </head>
 
@@ -12,10 +13,10 @@
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Ff5fb06bae980ae5f3bc67b14d71ff4f5%2F1667067170083Homemade-Lasagna.jpeg&q=60&c=sc&poi=auto&orient=true&h=512"
         alt="Lasagna" width="300" height="300">
     <h2>Description</h2>
-    <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously
+    <p class="lasagna">This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously
         cheesy filling. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="ingredients">
         <li>Meat</li>
         <li>Onion</li>
         <li>Canned Tomatoes</li>
@@ -27,7 +28,7 @@
         <li>Eggs</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="step">
         <li>Cook the meat</li>
         <li>Cook the noodles</li>
         <li>Make the cheese layer</li>
