Edit index with box model

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/potatosalad.html">Italian Potato Salad</a></li>
-        <li><a href="./recipes/pepperonipizza.html">Campfire Pepperoni Pizza</a></li>
-    </ul>
+    <div class="recipe-title">
+        <h1>Odin Recipes</h1>
+    </div>
+    <div class="list">
+        <span class="items"><a href="./recipes/lasagna.html">Lasagna</a></span>
+        <span class="items"><a href="./recipes/potatosalad.html">Italian Potato Salad</a></span>
+        <span class="items"><a href="./recipes/pepperonipizza.html">Campfire Pepperoni Pizza</a></span>
+    </div>
 </body>
 </html>
